criando/cancelar/editar reserva
Summary: Cadastrando/Cancelando/Editando reserva

Test Plan: A ser realizado

Reviewers: remy.fru

Subscribers: maysams

Differential Revision: http://andreabrantes.ddns.net/D1

--- a/client/app/reserva/reserva.create.html
+++ b/client/app/reserva/reserva.create.html
@@ -3,12 +3,12 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-12">
-			<h1>New Client</h1>
+			<h1>Nova reserva</h1>
 		</div>
 
 		<div class="col-sm-12">
 			<form class="form" name="form" ng-submit="add(form)" novalidate>
-				<div ng-include src="'app/client/client.form.html'"></div>
+				<div ng-include src="'app/reserva/reserva.form.html'"></div>
 				<div>
 					<button class="btn btn-inverse btn-lg btn-login" type="submit">
 						Save</button>
