--- a/client/app/reserva/reserva.update.html
+++ b/client/app/reserva/reserva.update.html
@@ -3,15 +3,15 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-12">
-			<h1>Edit Client</h1>
+			<h1>Editar reserva</h1>
 		</div>
 		<div class="col-sm-12">
 			<form class="form" name="form" ng-submit="save(form)" novalidate>
-				<div ng-include src="'app/client/client.form.html'"></div>
+				<div ng-include src="'app/reserva/reserva.form.html'"></div>
 				<div>
 					<button class="btn btn-success btn-lg btn-login" type="submit">
-						Save</button>
-					<a href="/client" class="btn btn-danger btn-lg"> Cancel </a>
+						Salvar</button>
+					<a href="/client" class="btn btn-danger btn-lg"> Cancelar </a>
 				</div>
 			</form>
 		</div>
