--- a/client/app/reserva/reserva.show.html
+++ b/client/app/reserva/reserva.show.html
@@ -3,17 +3,17 @@
 	<div class="row">
 		<div class="update col-sm-12">
 			<fieldset ng-init="readOnly = true">
-				<div ng-include src="'app/client/client.form.html'"></div>
+				<div ng-include src="'app/reserva/reserva.form.html'"></div>
 				<div class="form-group" ng-show="isAdmin()">
 					<label>Owner</label> <input ng-readonly="readOnly"
 						class="form-control" ng-model="client.owner" />
 				</div>
 			</fieldset>
 		</div>
-		<a class="btn btn-success btn-lg" href="/client"> Back</a> <a
+		<a class="btn btn-success btn-lg" href="/client"> Retornar</a> <a
 			class="btn btn-warning btn-lg" href="/client/edit/{{client._id}}">
-			Edit</a>
+			Editar</a>
 		<button class="btn btn-danger btn-lg" ng-click="delete(client)">
-			Delete</button>
+			Deletar</button>
 	</div>
 </div>
