--- a/client/index.html
+++ b/client/index.html
@@ -124,6 +124,8 @@
     <script src="app/property/property.js"></script>
     <script src="app/property/property.show.controller.js"></script>
     <script src="app/property/property.update.controller.js"></script>
+    <script src="app/recurso/recurso.controller.js"></script>
+    <script src="app/recurso/recurso.js"></script>
     <script src="app/reserva/reserva.controller.js"></script>
     <script src="app/reserva/reserva.create.controller.js"></script>
     <script src="app/reserva/reserva.js"></script>
