--- a/client/app/recurso/recurso.index.html
+++ b/client/app/recurso/recurso.index.html
@@ -1,20 +1,24 @@
 <div class="row">
+    <h3>Recursos Esportivos</h3>
+</div>
+<div class="row">
     <ul class="list-group">
+        <li class="list-group-item" style="background:#004D40;color:white;">
+            <strong>Nome do Recurso</strong>
+            <a class="pull-right" style="color:white;" href="/recurso/new"
+                ng-mouseover="mouseOver = ' Adicionar Recurso'"
+                ng-mouseleave="mouseOver = ''">
+                <span class="fa fa-plus"><strong>{{mouseOver}}</strong></span>
+            </a>
+        </li>
         <li class="list-group-item" ng-show="recursosVazio()"><strong>Nenhuma recurso esportivo cadastrado</strong>
             <br>
         </li>
-        <li class="list-group-item col-md-12" ng-repeat="recurso in recursos">
-            <span data-ng-hide="novoRecurso" class="text-muted">{{recurso.nome}}</span>
-            <span data-ng-show="novoRecurso" class="col-md-5">
-            	<input type="text" name="nome" class="form-control" data-ng-model="novoRecurso.nome" required />
-            </span>
-            <a ng-click="add(novoRecurso)" class="show">
-                <span class="fa fa-floppy-o pull-right"></span>
-            </a>
+        <li class="list-group-item" name="list-group-item-recurso-{{$index}}" ng-repeat="recurso in recursos | orderBy: 'nome'">
+            <span ng-hide="recursoEditado"><span>{{recurso.nome}}</span></span>
+            <input ng-show="recursoEditado" type="text" name="nome" class="form-control" ng-model="recursoEditado.nome" />
+            <a ng-click="delete(recurso)" title="Deletar" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+            <a href="/recurso/edit/{{recurso._id}}" title="Editar" class="show"><span class="glyphicon glyphicon glyphicon-pencil pull-right"></span></a>
         </li>
     </ul>
-</div>
-<div class="row">
-    <a class="btn btn-default btn-lg btn-register" data-ng-click="addRecurso()">
-		Criar </a>
 </div>
