--- a/client/app/horario/horario.form.html
+++ b/client/app/horario/horario.form.html
@@ -17,7 +17,7 @@
             <div class="form-group" ng-class="{ 'has-success': form.hora.$valid && submitted,
                                                             'has-error': form.hora.$invalid && submitted }">
                 <label>Hora</label>
-                <input type="number" name="hora" class="form-control" ng-model="horario.hora" />
+                <input type="number" name="hora" class="form-control" ng-model="horario.hora" min="5" max="23" step="1.5" />
             </div>
             <div class="form-group" ng-class="{ 'has-success': form.duracao.$valid && submitted,
                                                             'has-error': form.duracao.$invalid && submitted }">
