--- a/client/app/reserva_pendente/reserva_pendente.update.html
+++ b/client/app/reserva_pendente/reserva_pendente.update.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="col-sm-12">
 			<form class="form" name="form" ng-submit="save(form)" novalidate>
-				<div ng-include src="'app/reserva/reserva.form.html'"></div>
+				<div ng-include src="'app/reserva_pendente/reserva_pendente.form.html'"></div>
 				<div>
 					<button class="btn btn-success btn-lg btn-login" type="submit">
 						Salvar</button>
