--- a/client/app/reserva_pendente/reserva_pendente.form.html
+++ b/client/app/reserva_pendente/reserva_pendente.form.html
@@ -16,13 +16,13 @@
 	<p class="help-block" ng-show="form.email.$error.email && submitted">
 		Não parece com um email válido.</p>
 	<p class="help-block" ng-show="form.email.$error.required && submitted">Qual é o seu endereço de email?</p>
-	<p class="help-block" ng-show="form.email.$error.mongoose">{{errors.email}}</p>
+	<p class="help-block" ng-show="form.email.$error.mongoose">{{errors.email }}</p>
 </div>
 
 <div class="form-group"
 	ng-class="{ 'has-success': form.name.$valid && submitted,
                                             'has-error': form.name.$invalid && submitted }">
-	<label>Instalação esportiva</label> <input ng-readonly="readOnly" type="text" name="name" class="form-control" />
+	<label>Instalação esportiva</label> <input type="text" name="name" class="form-control" ng-model="client.recurso" required/>
 	<p class="help-block" ng-show="form.name.$error.required && submitted">A
 		Instalação esportiva é obrigatório</p>
 </div>
@@ -30,18 +30,19 @@
 <div > 
 	<div style="float: left;">
 		<label>Data</label> 
-		<input type = "date" name = "data" id ="data" /> <br/> 
+		<input type = "date" name = "data" id ="data" ng-model="client.data" required/> <br/> 
 	</div>
 
 	<div style="float: right, position: relative;">
 		<label>Horário</label> 
-		<input type=time min=6:00 max=20:00 step=900 style="height: 40px;"> 
+		<input type=number min=6 max=20 style="height: 40px;" ng-model="client.hora" required> 
+	</div>
+
+	<div style="float: right, position: relative;">
+		<label>Pessoas Inscritas</label> 
+		<input type=number min=0 max=22 style="height: 40px;" ng-model="client.qtdPessoas" required> / <input type=number min=0 max=22 style="height: 40px;" ng-model="client.qtdMinimaPessoas" required> 
 	</div>
 	
 </div>
 
 <br></br>
-
-
-
-
