--- a/client/app/reserva_pendente/reserva_pendente.index.html
+++ b/client/app/reserva_pendente/reserva_pendente.index.html
@@ -1,16 +1,16 @@
 <div class="row">
 	<ul class="list-group">
 		<li class="list-group-item" ng-show="noClients()"><strong>Nenhuma reserva pendente cadastrada</strong><br></li>
-		<li class="list-group-item" ng-repeat="client in clients"><strong>{{client.nome}} </strong> <br>
-		<span class="text-muted">{{client.email}}</span> <br> <a
-		<span class="text-muted">Inscritos {{ client.qtdPessoas }} / {{ client.qtdMinimaPessoas }}</span> <br>
-		<span class="text-muted">Dia {{client.data | date:'dd/MM/yyyy'}}</span>
-			<span class="text-muted"> às {{client.hora}}h</span>  <a
-			ng-click="delete(client)" class="trash"><span
+		<li class="list-group-item" ng-repeat="reserva_pendente in reservas_pendentes"><strong>{{reserva_pendente.nome}} </strong> <br>
+		<span class="text-muted">{{reserva_pendente.email}}</span> <br> <a
+		<span class="text-muted">Inscritos {{ reserva_pendente.qtdPessoas }} / {{ reserva_pendente.qtdMinimaPessoas }}</span> <br>
+		<span class="text-muted">Dia {{reserva_pendente.data | date:'dd/MM/yyyy'}}</span>
+			<span class="text-muted"> às {{reserva_pendente.hora}}h</span>  <a
+			ng-click="delete(reserva_pendente)" class="trash"><span
 				class="glyphicon glyphicon-trash pull-right"></span></a> <a
-			ng-click="show(client)" class="show"><span
+			ng-click="show(reserva_pendente)" class="show"><span
 				class="glyphicon glyphicon-th-large pull-right"></span></a> <a
-			ng-click="edit(client)" class="show"><span
+			ng-click="edit(reserva_pendente)" class="show"><span
 				class="glyphicon glyphicon glyphicon-pencil pull-right"></span></a></li>
 	</ul>
 	<a class="btn btn-default btn-lg btn-register" href="/reserva_pendente/new">Criar reserva pendente</a>
