--- a/client/app/reserva_pendente/reserva_pendente.show.html
+++ b/client/app/reserva_pendente/reserva_pendente.show.html
@@ -4,12 +4,12 @@
             <div ng-include src="'app/reserva_pendente/reserva_pendente.form.html'"></div>
             <div class="form-group" ng-show="isAdmin()">
                 <label>Owner</label>
-                <input ng-readonly="readOnly" class="form-control" ng-model="client.owner" />
+                <input ng-readonly="readOnly" class="form-control" ng-model="reserva_pendente.owner" />
             </div>
         </fieldset>
     </div>
-    <a class="btn btn-success btn-lg" href="/reserva_pendente"> Back</a> <a class="btn btn-warning btn-lg" href="/reserva_pendente/edit/{{client._id}}">
+    <a class="btn btn-success btn-lg" href="/reserva_pendente"> Back</a> <a class="btn btn-warning btn-lg" href="/reserva_pendente/edit/{{reserva_pendente._id}}">
 			Editar</a>
-    <button class="btn btn-danger btn-lg" ng-click="delete(client)">
+    <button class="btn btn-danger btn-lg" ng-click="delete(reserva_pendente)">
         Deletar</button>
 </div>
