--- a/client/app/reserva_pendente/reserva_pendente.update.html
+++ b/client/app/reserva_pendente/reserva_pendente.update.html
@@ -11,7 +11,7 @@
 				<div>
 					<button class="btn btn-success btn-lg btn-login" type="submit">
 						Salvar</button>
-					<a href="/client" class="btn btn-danger btn-lg"> Cancelar </a>
+					<a href="/reserva_pendente" class="btn btn-danger btn-lg"> Cancelar </a>
 				</div>
 			</form>
 		</div>
