--- a/client/app/reserva_pendente/reserva_pendente.index.html
+++ b/client/app/reserva_pendente/reserva_pendente.index.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<ul class="list-group">
-		<li class="list-group-item" ng-show="noClients()"><strong>Nenhuma reserva pendente cadastrada</strong><br></li>
+		<li class="list-group-item" ng-show="noReserves()"><strong>Nenhuma reserva pendente cadastrada</strong><br></li>
 		<li class="list-group-item" ng-repeat="reserva_pendente in reservas_pendentes"><strong>{{reserva_pendente.nome}} </strong> <br>
 		<span class="text-muted">{{reserva_pendente.email}}</span> <br> <a
 		<span class="text-muted">Inscritos {{ reserva_pendente.qtdPessoas }} / {{ reserva_pendente.qtdMinimaPessoas }}</span> <br>
