--- a/client/app/reserva/reserva.update.html
+++ b/client/app/reserva/reserva.update.html
@@ -6,14 +6,16 @@
 			<h1>Editar reserva</h1>
 		</div>
 		<div class="col-sm-12">
-			<form class="form" name="form" ng-submit="save(form)" novalidate>
-				<div ng-include src="'app/reserva/reserva.form.html'"></div>
-				<div>
-					<button class="btn btn-success btn-lg btn-login" type="submit">
-						Salvar</button>
-					<a href="/reserva" class="btn btn-danger btn-lg"> Cancelar </a>
-				</div>
-			</form>
+        	<fieldset ng-init="readOnly = true">
+				<form class="form" name="form" ng-submit="save(form)" novalidate>
+					<div ng-include src="'app/reserva/reserva.form.html'"></div>
+					<div>
+						<button class="btn btn-success btn-lg btn-login" type="submit">
+							Salvar</button>
+						<a href="/reserva" class="btn btn-danger btn-lg"> Cancelar </a>
+					</div>
+				</form>
+			</fieldset>
 		</div>
 	</div>
 	<hr>
