--- a/client/app/sobre/sobre.html
+++ b/client/app/sobre/sobre.html
@@ -4,7 +4,7 @@
 		André Abrantes <br>
 		Ana Luiza Mota <br>
 		Carlos Rafael da Silva <br>
-		Remy de Frý <br>
+		Rémy De Fru <br>
 		Maysa
 	</small>
 </div>
