--- a/client/app/reserva/reserva.show.html
+++ b/client/app/reserva/reserva.show.html
@@ -3,7 +3,7 @@
         <fieldset ng-init="readOnly = true">
             <div ng-include src="'app/reserva/reserva.form.html'"></div>
             <div class="form-group" ng-show="isAdmin()">
-                <label>Owner</label>
+                <label>Dono</label>
                 <input ng-readonly="readOnly" class="form-control" ng-model="reserva.nome" />
             </div>
         </fieldset>
