--- a/client/index.html
+++ b/client/index.html
@@ -122,6 +122,8 @@
     <script src="app/post/post.js"></script>
     <script src="app/post/post.show.controller.js"></script>
     <script src="app/post/post.update.controller.js"></script>
+    <script src="app/presenca/presenca.index.controller.js"></script>
+    <script src="app/presenca/presenca.js"></script>
     <script src="app/property/property.controller.js"></script>
     <script src="app/property/property.create.controller.js"></script>
     <script src="app/property/property.js"></script>
