--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,8 @@
     <!-- build:css(client) app/vendor.css -->
 
       <!-- bower:css -->
-      <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+            <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -161,6 +162,9 @@
     <!-- jQuery -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+     <script src="../bower_components/moment/moment.js"></script>
+    <link href="../bower_components/angular-bootstrap-calendar/dist/css/angular-bootstrap-calendar.min.css" rel="stylesheet">
+    <script src="../bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js"></script>
     <!-- Morris Charts JavaScript -->
     <script src="assets/js/plugins/morris/raphael.min.js"></script>
     <script src="assets/js/plugins/morris/morris.min.js"></script>
