--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
     <!-- build:css(client) app/vendor.css -->
 
       <!-- bower:css -->
-            <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+                  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
 
       <!-- endbower -->
     <!-- endbuild -->
@@ -114,6 +114,7 @@
     <script src="app/externalapp/externalapp.controller.js"></script>
     <script src="app/externalapp/externalapp.create.controller.js"></script>
     <script src="app/externalapp/externalapp.js"></script>
+    <script src="app/horario/calendario.controller.js"></script>
     <script src="app/horario/horario.controller.js"></script>
     <script src="app/horario/horario.js"></script>
     <script src="app/main/main.controller.js"></script>
