--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,74 +1,31 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Cadastro</h1>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="register(form)" novalidate>
-
-        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
-                                            'has-error': form.name.$invalid && submitted }">
-          <label>Nome</label>
-
-          <input type="text" name="name" class="form-control" ng-model="user.name"
-                 required/>
-          <p class="help-block" ng-show="form.name.$error.required && submitted">
-            Nome é obrigatório.
-          </p>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
-                                            'has-error': form.email.$invalid && submitted }">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="user.email"
-                 required
-                 mongoose-error/>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
-            Digite um email válido.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.required && submitted">
-            Qual o seu email?
-          </p>
-          <p class="help-block" ng-show="form.email.$error.mongoose">
-            {{ errors.email }}
-          </p>
-        </div>
-
+<div class="col-sm-12">
+    <h1>Cadastro</h1>
+</div>
+<div class="col-sm-12">
+    <form class="form" name="form" ng-submit="register(form)" novalidate>
+        <div ng-include src="'app/account/signup/campos.html'"></div>
         <div class="form-group" ng-class="{ 'has-success': form.password.$valid && submitted,
                                             'has-error': form.password.$invalid && submitted }">
-          <label>Senha</label>
-
-          <input type="password" name="password" class="form-control" ng-model="user.password"
-                 ng-minlength="3"
-                 required
-                 mongoose-error/>
-          <p class="help-block"
-             ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
-            A senha deve conter ao menos 3 caracteres.
-          </p>
-          <p class="help-block" ng-show="form.password.$error.mongoose">
-            {{ errors.password }}
-          </p>
+            <label>Senha</label>
+            <input type="password" name="password" class="form-control" ng-model="user.password" ng-minlength="3" required mongoose-error/>
+            <p class="help-block" ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
+                A senha deve conter ao menos 3 caracteres.
+            </p>
+            <p class="help-block" ng-show="form.password.$error.mongoose">
+                {{ errors.password }}
+            </p>
         </div>
-
         <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Cadastrar
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/login">
-            Entrar
-          </a>
+            <button class="btn btn-inverse btn-lg btn-login" type="submit">
+                Cadastrar
+            </button>
+            <a class="btn btn-default btn-lg btn-register" href="/login">Entrar</a>
         </div>
-
         <hr>
         <div>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Entrar com Google+
-          </a>
+            <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
+                <i class="fa fa-google-plus"></i> Entrar com Google+
+            </a>
         </div>
-      </form>
-    </div>
-  </div>
-  <hr>
+    </form>
 </div>
