Menu Tabela de Jogos

--- a/client/index.html
+++ b/client/index.html
@@ -149,6 +149,8 @@
     <script src="app/sale/sale.show.controller.js"></script>
     <script src="app/sale/sale.update.controller.js"></script>
     <script src="app/sobre/sobre.js"></script>
+    <script src="app/tabela/tabela.controller.js"></script>
+    <script src="app/tabela/tabela.js"></script>
     <script src="app/user/user.controller.js"></script>
     <script src="app/user/user.js"></script>
     <script src="components/auth/auth.service.js"></script>
