T20 Adicionar campos em cadastro de recursos esportivos
Summary: campos adicionados no form de cadastro

Test Plan: testes de aceitacao

Reviewers: Analuizamtg

Differential Revision: http://andreabrantes.ddns.net/D15

--- a/client/app/recurso/recurso.form.html
+++ b/client/app/recurso/recurso.form.html
@@ -8,6 +8,15 @@
                                                             'has-error': form.nome.$invalid && submitted }">
                 <label>Nome</label>
                 <input type="text" name="nome" class="form-control" ng-model="recurso.nome" required />
+                <label>
+                    Em Atividade
+                    <input type="checkbox" ng-model="recurso.active" >
+                </label>
+                <br>
+                <label>
+                    Recurso Privado
+                    <input type="checkbox" ng-model="recurso.private" >
+                </label>
             </div>
             <button class="btn btn-success" type="submit">
                 Salvar</button>
