--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,9 @@
     <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="../bower_components/flow.js/dist/flow.js"></script>
     <script src="../bower_components/ng-flow/dist/ng-flow.js"></script>
+    <link rel="stylesheet" href="http://jtblin.github.io/angular-chart.js/dist/angular-chart.css" />
+<script src="http://jtblin.github.io/angular-chart.js/bower_components/Chart.js/Chart.js"></script>
+<script src="http://jtblin.github.io/angular-chart.js/dist/angular-chart.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -133,16 +136,16 @@
     <script src="app/property/property.update.controller.js"></script>
     <script src="app/recurso/recurso.controller.js"></script>
     <script src="app/recurso/recurso.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.controller.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.create.controller.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.show.controller.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.update.controller.js"></script>
     <script src="app/reserva/reserva.controller.js"></script>
     <script src="app/reserva/reserva.create.controller.js"></script>
     <script src="app/reserva/reserva.js"></script>
     <script src="app/reserva/reserva.show.controller.js"></script>
     <script src="app/reserva/reserva.update.controller.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.controller.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.create.controller.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.show.controller.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.update.controller.js"></script>
     <script src="app/sale/sale.controller.js"></script>
     <script src="app/sale/sale.create.controller.js"></script>
     <script src="app/sale/sale.js"></script>
