--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,105 +1,31 @@
-<div class="row">
+<div class="row" >
     <div class="col-lg-12">
         <h1 class="page-header">
                             Painel de Controle
                         </h1>
         <ol class="breadcrumb">
             <li class="active">
-                <i class="fa fa-dashboard"></i> Início
+                <i class="fa fa-dashboard"></i> Calendários
             </li>
         </ol>
     </div>
 </div>
 <!-- /.row -->
-<div class="row">
-    <div class="col-lg-3 col-md-6">
+<div class="row" ng-repeat="recursoEsportivo in recursos | orderBy: 'nome'">
+    <div class="col-lg-12 col-md-12">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-comments fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">26</div>
-                        <div>New Comments!</div>
-                    </div>
-                </div>
+                    
+                <strong>{{recursoEsportivo.nome}}</strong>
+                    
+                <a style="color:#263238;" class="pull-right" href="/main/show/{{recursoEsportivo._id}}" ng-mouseover="mouseOver = ' Visualizar Calendário'"+ ng-mouseleave="mouseOver = ''">
+                    <span class="fa fa-calendar custom"><strong>{{mouseOver}}</strong></span>
+                </a>
             </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
+
         </div>
     </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-green">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-tasks fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">12</div>
-                        <div>New Tasks!</div>
-                    </div>
-                </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-yellow">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-shopping-cart fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">124</div>
-                        <div>New Orders!</div>
-                    </div>
-                </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-red">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-support fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">13</div>
-                        <div>Support Tickets!</div>
-                    </div>
-                </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
+
 </div>
 <!-- /.row -->
 <div class="row">
@@ -109,7 +35,11 @@
                 <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Area Chart</h3>
             </div>
             <div class="panel-body">
-                <div id="morris-area-chart"></div>
+<!--                 <canvas id="bar" class="chart chart-bar"
+                  chart-data="data" chart-labels="labels"> chart-series="series"
+                </canvas
+            </canvas>
+            <div id="legendDiv"></div> -->
             </div>
         </div>
     </div>
@@ -119,13 +49,12 @@
     <div class="col-lg-4">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Donut Chart</h3>
+                <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Quantidade de reservas diárias</h3>
             </div>
             <div class="panel-body">
-                <div id="morris-donut-chart"></div>
-                <div class="text-right">
-                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                </div>
+                <canvas id="doughnut" class="chart chart-doughnut"
+                 chart-data="dataDoughnut" chart-labels="labelsDoughnut">
+                </canvas> 
             </div>
         </div>
     </div>
