T21 Melhorar a view de reservas (CRUD)
Summary: Task implementada no CRUD de reservas

Test Plan: Acceptance testing

Reviewers: remy.fru, Analuizamtg, maysams, andre.abrantes

Differential Revision: http://andreabrantes.ddns.net/D18

--- a/client/app/reserva/reserva.index.html
+++ b/client/app/reserva/reserva.index.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<ul class="list-group">
 		<li class="list-group-item" ng-show="noClients()"><strong>Nenhuma reserva cadastrada</strong><br></li>
-		<li class="list-group-item" ng-repeat="reserva in reservas"><strong>{{reserva.nome}}</strong><br>
+		<li class="list-group-item" ng-repeat="reserva in reservas" title="{{reserva.descricao}}"><strong>{{reserva.nome}}</strong><br>
 			<span class="text-muted">{{reserva.email}}</span> <br>
 			<span class="text-muted">Dia {{reserva.data  | date:'dd/MM/yyyy'}}</span>
 			<span class="text-muted"> às {{reserva.hora}}h</span>  <a
