--- a/client/app/reserva/reserva.form.html
+++ b/client/app/reserva/reserva.form.html
@@ -1,22 +1,10 @@
 <div class="form-group"
-	ng-class="{ 'has-success': form.name.$valid && submitted,
-                                            'has-error': form.name.$invalid && submitted }">
-	<label>Nome</label> <input type="text" name="name" class="form-control"
-		ng-model="reserva.nome" required />
+	ng-class="{ 'has-success': form.descricao.$valid && submitted,
+                                            'has-error': form.descricao.$invalid && submitted }">
+	<label>Descrição</label> <input type="text" name="descricao" class="form-control"
+		ng-model="reserva.descricao" required />
 	<p class="help-block" ng-show="form.name.$error.required && submitted">A
-		Nome é obrigatório</p>
-</div>
-
-<div class="form-group"
-	ng-class="{ 'has-success': form.email.$valid && submitted,
-                                            'has-error': form.email.$invalid && submitted }">
-	<label>Email</label> <input ng-readonly="readOnly" type="email" name="email"
-		class="form-control" ng-model="reserva.email" required
-		mongoose-error />
-	<p class="help-block" ng-show="form.email.$error.email && submitted">
-		Não parece com um email válido.</p>
-	<p class="help-block" ng-show="form.email.$error.required && submitted">Qual é o seu endereço de email?</p>
-	<p class="help-block" ng-show="form.email.$error.mongoose">{{errors.email }}</p>
+		Descrição é obrigatória</p>
 </div>
 
 <div class="form-group"
