adicionando proxima reserva do usuario
Test Plan: teste

Reviewers: maysams, rafael

Differential Revision: http://andreabrantes.ddns.net/D19

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,3 +1,6 @@
+<div class="alert alert-info" ng-show="temReserva && !isAdmin">
+  <strong>Sua próxima reserva é em {{dataUltimaReserva}} às {{ultimaReserva.hora}} horas em {{ultimaReserva.recurso}}</strong> 
+</div>
 <div class="row" >
     <div class="col-lg-12">
         <h1 class="page-header">
