--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,9 @@
     <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="../bower_components/flow.js/dist/flow.js"></script>
     <script src="../bower_components/ng-flow/dist/ng-flow.js"></script>
+    <link rel="stylesheet" href="http://jtblin.github.io/angular-chart.js/dist/angular-chart.css" />
+    <script src="http://jtblin.github.io/angular-chart.js/bower_components/Chart.js/Chart.js"></script>
+    <script src="http://jtblin.github.io/angular-chart.js/dist/angular-chart.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
