--- a/client/index.html
+++ b/client/index.html
@@ -29,11 +29,8 @@
     <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="../bower_components/flow.js/dist/flow.js"></script>
     <script src="../bower_components/ng-flow/dist/ng-flow.js"></script>
-    <link rel="stylesheet" href="http://jtblin.github.io/angular-chart.js/dist/angular-chart.css" />
-    <script src="http://jtblin.github.io/angular-chart.js/bower_components/Chart.js/Chart.js"></script>
-    <script src="http://jtblin.github.io/angular-chart.js/dist/angular-chart.js"></script>
+    <script src="../bower_components/Chart.js/dist/Chart.js"></script>
         <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
-
     <!-- endbower -->
     <!-- endbuild -->
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
